<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="loading">加载中</string>
    <string name="places_holder" translatable="false">Places Holder</string>
    <string name="gameOver">你的账号已在其他地方登录</string>
    <string name="freeRoom">当前为免费房间</string>
    <string name="goldMinute">金币/ 分钟</string>
    <string name="goldOnce">金币/次</string>
    <string name="currentPwRoom">修改成功,当前为密码房间</string>
    <string name="mirrorOpen">摄像头·开</string>
    <string name="mirrorClose">摄像头·关</string>
    <string name="cameraFront">摄像头·前</string>
    <string name="cameraBack">摄像头·后</string>
    <string name="punishment">惩罚中</string>
    <string name="connected">链接代码</string>
    <string name="skipping">跳蛋</string>
    <string name="toy_change">目前已有一个玩具连接，确定更换？</string>
    <string name="liveTool">直播工具</string>
    <string name="beauty">美颜</string>
    <string name="turnOver">翻转</string>
    <string name="sendPK">向你发起了PK</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="initiatingPK">正在发起中</string>
    <string name="selectFriend">选择邀请的好友</string>
    <string name="inviting">邀请中</string>
    <string name="noAcceptPK">对方未应答您的邀请</string>
    <string name="invitingPK">正在邀请对方中，不等了吗？</string>
    <string name="waitMore">再等一会</string>
    <string name="noWait">不等了</string>
    <string name="acceptClose">接受邀请·关</string>
    <string name="acceptOpen">接受邀请·开</string>
    <string name="noReceivePK">未收到响应</string>
    <string name="noFriendPk">暂无好友可以PK</string>
    <string name="randomMatch">随机匹配</string>
    <string name="friendMatch">好友匹配</string>
    <string name="attentionFriend">互相关注即可成为好友哦</string>
    <string name="bluetoothGPS">搜索失败，请开启蓝牙和后再尝试!</string>
    <string name="searchToy">搜索玩具中</string>
    <string name="timeRoom">计时房间&#160;:&#160;</string>
    <string name="onceRoom">单次房间&#160;:&#160;</string>
    <string name="passwordRoom">密码房间&#160;:&#160;</string>
    <string name="modifyAsFree">修改成功,当前为免费房间</string>
    <string name="modifyAsTime">修改成功,当前为计时房间</string>
    <string name="modifyAsTimes">修改成功,当前为单次房间</string>
    <string name="modifyAsPw">修改成功,当前为密码房间</string>
    <string name="GPSpermition">需要蓝牙和权限才可正常使用</string>
    <string name="see">知道了</string>
    <string name="connecting">连接中</string>
    <string name="retry">重试</string>
    <string name="PKearlyEnd">目前正在进行中，确定提前结束吗？</string>
    <string name="publishEarlyEnd">目前在惩罚对方，确定提前结束吗？</string>
    <string name="permitionRun">你必须給权限才能正常运行</string>
    <string name="caiNunber">请选至少一个彩种</string>
    <string name="caiNunbera">最多能选2个彩种</string>
    <string name="rtmp">拉流地址不合可用!</string>
    <string name="verificationFailed">License 验证失败  </string>
    <string name="hardCoding">当前机型不支持视频硬骗号</string>
    <string name="failRetry">直播失败，请查网络</string>
    <string name="netBad">你当前的网络状况不好</string>
    <string name="netDisconnect">网络被断开，请检查网络</string>
    <string name="roomClose">房间关闭</string>
    <string name="endLive">直播已结束</string>
    <string name="retryConnect">重连</string>
    <string name="sureEndLive">确定结束直播?</string>
    <string name="chatRetry"> 与聊天服务器断开,尝试重连中</string>
    <string name="chatRetrying">与聊天室断开连接,尝试重连中</string>
    <string name="connectedJoin">连接成功,加入群聊</string>
    <string name="failMore">对方多次连接失败，请稍后再试</string>
    <string name="good">好的</string>
    <string name="playFail">播放失败</string>
    <string name="PKfailRetry">PK 链接失败，请稍后再试</string>
    <string name="openJoinChat">开播加入聊天</string>
    <string name="liveSuccess">直播间创建成功</string>
    <string name="forceOfficeCloseLive">你已被官方強制关播</string>
    <string name="forceCloseLive">已被強制关播</string>
    <string name="refusePKinvited">对方拒绝了你的邀请</string>
    <string name="reChoose">重新选择</string>
    <string name="cancelPKinvite">" 对方取消了PK邀请"</string>
    <string name="anchorLive"> 主播等级</string>
    <string name="liveTime">本次直播时长</string>
    <string name="liveProfit">本次理论收益</string>
    <string name="returnFirstPage">回到首页</string>
    <string name="goAnchorCenter">回到主播中心</string>
    <string name="noMoreThanTwo">选最多2个彩种</string>
    <string name="openLive">开启直播</string>
    <string name="roomSet">房间设置</string>
    <string name="choiceLiveRoute">选择直播线路</string>
    <string name="mysteriousMan">神秘人</string>
    <string name="numberNewMessage">没有新消息</string>
    <string name="successFocus">关注成功</string>
    <string name="cancelFocus">已取消关注</string>
    <string name="myPart">我方&#160;</string>
    <string name="yourPart">&#160;对方</string>
    <string name="equalPublish">两方进入惩罚阶段</string>
    <string name="sureGo">进入直播间</string>
    <string name="reLogin">获取用户信息失败，请重新登录</string>
    <string name="currentGame">当前正在游戏，确认退出吗？</string>
    <string name="muted">被禁言</string>
    <string name="unMuted">被解除禁言</string>
    <string name="cancelAdminRights">管理员权限被取消</string>
    <string name="obtainAdmin">获得管理员权限</string>
    <string name="livingTips1">您已获得管理员权限</string>
    <string name="livingTips2">您已被踢出房间，你将无法再进入\n该主播的直播间</string>
    <string name="livingTips3">您已被禁言</string>
    <string name="livingTips4">您已被解除禁言</string>
    <string name="forever">永久</string>
    <string name="contentLong">内容过长</string>
    <string name="number">号</string>
    <string name="odds">赔率</string>
    <string name="news">新消息</string>
    <string name="focus">关注</string>
    <string name="charm">魅力</string>
    <string name="publish">惩罚</string>
    <string name="charting">聊天</string>
    <string name="charge">充值</string>
    <string name="sendGif">送礼</string>
    <string name="continuousSending">连送</string>
    <string name="dataWrong">数据异常</string>
    <string name="agencyBalance">代理余额&#160;:&#160;</string>
    <string name="moneyUnit">&#160;¥</string>
    <string name="stakes" translatable="false">&#160; X &#160;</string>
    <string name="AGYoplay" translatable="false">BG</string>
    <string name="TYYoplay" translatable="false">CMD 368</string>
    <string name="game_balance_play" translatable="false">SABA</string>
    <string name="TYYoplay_cmd" translatable="false">CMD</string>
    <string name="AGGameCoin">BG币</string>
    <string name="TYGameCoin">CMD 币</string>
    <string name="inputAGGameCoin">输入转换BG游戏币数量</string>
    <string name="inputTYGameCoin">输入转换CMD游戏币数量</string>
    <string name="goldCoinToGamet">1金币= 1CMD</string>
    <string name="my_balance">%1$s 金币 = %2$s %3$s</string>
    <string name="my_balance_hint">输入转换%1$s游戏币数量</string>
    <string name="recharge_transfer_name_tile">*&#160;汇款姓名</string>
    <string name="recharge_account_tile">*&#160;汇款账号</string>
    <string name="recharge_account_hint">请输入汇款账号</string>
    <string name="recharge_name_hint">请输入正确的汇款人姓名</string>
    <string name="recharge_transfer_backup">备注</string>
    <string name="recharge_backup_hint">请输入备注信息(可选)</string>
    <string name="recharge_name_empty">请填写汇款人姓名后再提交</string>
    <string name="recharge_account_empty">请填写汇款账号后再提交</string>
    <string name="tycooncc">大富翁棋牌</string>
    <string name="tycoongc">大富翁游戏币</string>
    <string name="gameCoinsTycoon">输入转换大富翁游戏币数量</string>
    <string name="goldCoinsTycoon">10金币兑换1大富翁游戏币</string>
    <string name="cannotEntered">数不能输入为0</string>
    <string name="insufficientBalance">余额不足</string>
    <string name="inputMoney">请输入合理的金额</string>
    <string name="lessGoldCoin">余额不足</string>
    <string name="transferOut">转出</string>
    <string name="transferIn">转入</string>
    <string name="congratGrading">恭喜主播等级升级到</string>
    <string name="congratGrad">恭喜你升级到</string>
    <string name="ordinaryRoom">普通房间</string>
    <string name="timeRoomt">计时房间</string>
    <string name="onceRoomt">单次房间</string>
    <string name="passwordRoomt">密码房间</string>
    <string name="setPassword">设置密码</string>
    <string name="save">保存</string>
    <string name="enterPrivateMessage">在此输入私信内容</string>
    <string name="send">发送</string>
    <string name="selectLeastOne">请至少选择一项</string>
    <string name="betsChosen">投注必须要选择</string>
    <string name="coinMessage">金币信息&#160;:&#160;</string>
    <string name="AconstantColor">一份时时彩</string>
    <string name="historyRecord">结束</string>
    <string name="endCurrentPeriod">封盘&#160;:&#160;</string>
    <string name="chargeRight">充值 ></string>
    <string name="betting">投注</string>
    <string name="copyNetwork">颜值美女等你撩，可看可玩可潮吹！请复制网址到浏览器打开</string>
    <string name="sharepic">分享二维码已经保存在相册</string>
    <string name="QRFailed">二维码生成失敗</string>
    <string name="copyLink">复制链接</string>
    <string name="saveToPic">保存到相册</string>
    <string name="singleRoomSetting">单次房间设置</string>
    <string name="zeroGoldTime">0金币/次</string>
    <string name="oneThousandGoldTime">1–1000 金币/次</string>
    <string name="system_setting">系统设置</string>
    <string name="goldTime">金币/次</string>
    <string name="passwordRoomSet">密码房设置</string>
    <string name="passwordNo">密码:无</string>
    <string name="password">密码:&#160;&#160;</string>
    <string name="noInputNumber">您还未输入任何数字</string>
    <string name="timeRoomModel">计时房间模式选择</string>
    <string name="tenGoldMin">2金币/分钟</string>
    <string name="fifGoldMin">4金币/分钟</string>
    <string name="twentyGoldMin">6金币/分钟</string>
    <string name="colon" translatable="false">%1$s %2$s - %3$s</string>
    <string name="colon_number" translatable="false">%1$s:%2$d</string>
    <string name="report">举报</string>
    <string name="manager">管理</string>
    <string name="concerned">已关注</string>
    <string name="black">拉黑</string>
    <string name="cancelBlack2">取消拉黑</string>
    <string name="versionUpdateOptimize">已经有新版本！快更新</string>
    <string name="ignore">忽略</string>
    <string name="upLever">更新</string>
    <string name="goodName">特号&#160;:&#160;</string>
    <string name="focused">已关注</string>
    <string name="blacked">已拉黑</string>
    <string name="liftBan">解禁</string>
    <string name="forbiddenWords">静音</string>
    <string name="kicking">踢人</string>
    <string name="cancelManagement">取消房管</string>
    <string name="setAsManagement">设置房管</string>
    <string name="closeLive">关播</string>
    <string name="blackNumber">封号</string>
    <string name="blackPhone">封机</string>
    <string name="closeLiveSuccess">关播成功</string>
    <string name="closeLiveFail">关播失敗</string>
    <string name="blackSuccess">拉黑成功</string>
    <string name="cancelBlack">已取消拉黑</string>
    <string name="forbiddenWordsSucceed">禁言成功</string>
    <string name="banLiftedSuccessfully">解除禁言成功</string>
    <string name="tabooFailed">禁言失敗</string>
    <string name="kickingSuccess">踢出成功</string>
    <string name="kickingFail">踢出失敗</string>
    <string name="blackNumberSuccess">封号成功</string>
    <string name="blackPhoneSuccess">封号失败</string>
    <string name="setSuccess">设置成功</string>
    <string name="managementCancelled">已取消房管</string>
    <string name="setFail">设置失败</string>
    <string name="nickname">昵称</string>
    <string name="search_inquire">查询</string>
    <string name="yesBan">昨日</string>
    <string name="money_come">至</string>
    <string name="confirm">确认</string>
    <string name="this_month">本月</string>
    <string name="last_month">上月</string>
    <string name="lower_id_2">下级ID</string>
    <string name="input_lower_id">请输入下级ID</string>
    <string name="time_2">时&#12288;间</string>
    <string name="today">当日</string>
    <string name="this_week">本周</string>
    <string name="last_week">上周</string>
    <string name="move_out_id">转出会员ID</string>
    <string name="get_money_time">到账时间</string>
    <string name="no_more">沒有更多了</string>
    <string name="no_record">暂无记录</string>
    <string name="paymentPassword">支付密码</string>
    <string name="plzInputConfirmPassword">请输入确认密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="plzInputRetrieveHint">请输入找回暗语</string>
    <string name="retrieveHint">找回暗语</string>
    <string name="tipsOfPaymentOfPassword">请谨记找回暗语，密码丢失后，可通过手机+暗语找回。</string>
    <string name="plsInputPaymentPassword">请输入支付密码（6位纯数字）</string>
    <string name="amountOfMoney">金额</string>
</resources>