<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F1F8"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:background="#ffffffff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:textColor="#404040"
                android:textSize="16sp"
                android:text="@string/paymentPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:textColor="#404040"
                android:textSize="16sp"
                android:hint="@string/plsInputPaymentPassword"
                android:textColorHint="#D2CDE0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:background="#ffffffff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:textColor="#404040"
                android:textSize="16sp"
                android:text="@string/confirmPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:textColor="#404040"
                android:textSize="16sp"
                android:hint="@string/plzInputConfirmPassword"
                android:textColorHint="#D2CDE0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:background="#ffffffff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:textColor="#404040"
                android:textSize="16sp"
                android:text="@string/retrieveHint"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:textColor="#404040"
                android:textSize="16sp"
                android:hint="@string/plzInputRetrieveHint"
                android:textColorHint="#D2CDE0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="30dip"
            android:text="@string/tipsOfPaymentOfPassword"
            android:textSize="12sp"
            android:textColor="#F42C2C"/>

        <com.live.fox.view.GradientTextView
            android:id="@+id/gtCommit"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="30dip"
            android:layout_marginRight="50dip"
            android:gravity="center"
            android:onClick="onClickView"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:gt_color_list="@array/identificationColor"
            app:gt_radius_dp="3dip" />
    </LinearLayout>
</layout>