<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="click"
            type="com.live.fox.ui.mine.setting.paymentpassword.PaymentPasswordFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F1F8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#ffffffff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="center"
                android:text="@string/paymentPassword"
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPaymentPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:digits="0987654321"
                android:maxLength="6"
                android:background="#00000000"
                android:hint="@string/plsInputPaymentPassword"
                android:textColor="#404040"
                android:textColorHint="#D2CDE0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#ffffffff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="center"
                android:text="@string/confirmPassword"
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:digits="0987654321"
                android:maxLength="6"
                android:background="#00000000"
                android:hint="@string/plzInputConfirmPassword"
                android:textColor="#404040"
                android:textColorHint="#D2CDE0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#ffffffff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="center"
                android:text="@string/retrieveHint"
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etFindBackCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="10"
                android:singleLine="true"
                android:background="#00000000"
                android:hint="@string/plzInputRetrieveHint"
                android:textColor="#404040"
                android:textColorHint="#D2CDE0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F5F1F8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="30dip"
            android:text="@string/tipsOfPaymentOfPassword"
            android:textColor="#F42C2C"
            android:textSize="12sp" />

        <com.live.fox.view.GradientTextView
            android:id="@+id/gtCommit"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="30dip"
            android:layout_marginRight="50dip"
            android:gravity="center"
            android:onClick="@{click.onClickView}"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:gt_color_list="@array/identificationColor"
            app:gt_radius_dp="10dip" />
    </LinearLayout>
</layout>