<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="com.live.fox.ui.agency.AgencySaveRecordFragment" />

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.flyco.roundview.RoundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="7.5dp"
        app:rv_backgroundColor="@color/white"
        app:rv_cornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_id_2"
                android:textColor="@color/color665275"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:background="@color/white"
                android:layout_marginStart="25dp"
                android:hint="@string/input_lower_id"
                android:textColor="@color/color404040"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginStart="15dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:gravity="center"
                android:text="@string/search_inquire"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_a800ff_d689ff"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorF4F1F8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_2"
                android:textColor="@color/color665275"
                android:textSize="16sp" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/tvStartTime"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:layout_marginStart="25dp"
                android:onClick="@{click.onClickView}"
                android:textColor="@color/color404040"
                android:textSize="14sp"
                app:rv_cornerRadius="10dp"
                app:rv_backgroundColor="@color/colorF4F1F8"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_come"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:textColor="@color/color665275"
                android:textSize="16sp" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/tvEndTime"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:onClick="@{click.onClickView}"
                android:textColor="@color/color404040"
                android:textSize="14sp"
                app:rv_cornerRadius="10dp"
                app:rv_backgroundColor="@color/colorF4F1F8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvToday"
                android:onClick="@{click.onClickView}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:gravity="center"
                android:text="@string/today"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_a800ff_d689ff"
                />

            <TextView
                android:id="@+id/tvYesterday"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="@{click.onClickView}"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/yesBan"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_d8bde7"
                />

            <TextView
                android:id="@+id/tvThisWeek"
                android:onClick="@{click.onClickView}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/this_week"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_d8bde7"
                />

            <TextView
                android:id="@+id/tvLastWeek"
                android:onClick="@{click.onClickView}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/last_week"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_d8bde7"
                />


            <TextView
                android:id="@+id/tvThisMonth"
                android:onClick="@{click.onClickView}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/this_month"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_d8bde7"
                />


            <TextView
                android:id="@+id/tvLastMonth"
                android:onClick="@{click.onClickView}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/last_month"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_d8bde7"
                />

        </LinearLayout>
    </com.flyco.roundview.RoundLinearLayout>


    <com.flyco.roundview.RoundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:rv_cornerRadius_TR="10dp"
        app:rv_cornerRadius_TL="10dp"
        app:rv_backgroundColor="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingStart="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/move_out_id"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/color665275"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nickname"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/color665275"
                android:textSize="14sp"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/amountOfMoney"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/color665275"
                android:textSize="14sp"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.8"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/get_money_time"
                android:textColor="@color/color665275"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNoMore"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/no_more"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorA2A0A9"
            android:textSize="14sp"
            />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/layoutEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="121dp"
                android:layout_marginTop="30dp"
                android:src="@mipmap/zanwujilu_pic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_record"
                android:layout_marginTop="7dp"
                android:textColor="@color/colorA2A0A9"
                android:textSize="14sp"
                />


        </LinearLayout>



    </com.flyco.roundview.RoundLinearLayout>

</LinearLayout>

</layout>